package boutique.config;

public interface Configuration {

    int getSeuilGratuiteCents();

    int getPoidsMaxGrammes();
}