package boutique.livraison;

public interface StrategieLivraison {

    int calculerFrais(int poidsGrammes, int sousTotalCents);
}