package boutique.livraison;

public final class StrategieRetrait extends AbstractStrategieLivraison {

    @Override
    protected int calculer(int poidsGrammes, int sousTotalCents) {
        return 0;
    }
}