package boutique.modele;

public enum EtatCommande {
    BROUILLON,
    VALIDEE
}