package boutique.modele;

public class RefusValidationException extends RuntimeException {

    public RefusValidationException(String message) {
        super(message);
    }
}