package boutique.notification;

public interface Notifier {

    void notifier(String clientId, int totalCents);
}